# hw3

./: .travis.yml  README.md  hw3.cabal
src/: HW03.hs
test/: HW03Spec.hs
