name:          hw3
version:       0.1
cabal-version: >= 1.10

build-type: Simple

library
  build-depends:
    base >= 4 && < 5

  exposed-modules:
    HW03
    Set

  hs-source-dirs: src

  default-language: Haskell98

  ghc-options: -Wall

test-suite spec
  type:    exitcode-stdio-1.0
  main-is: Spec.hs

  hs-source-dirs: test

  other-modules:
    HW03Spec

  build-depends:
    hw3,
    base  >= 4   && < 5,
    hspec >= 2.5 && < 2.6

  default-language: Haskell98
